                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 30-04-2006 updated: lame to version 3.97beta2 (system/cdrip contains the updated dll)
 - 30-04-2006 changed: Music OSD keymap - CodecInfo & MusicInfo changed from global to local settings (Gamepad/Remote). Slidehow keymap fixed changed from 'Info' to 'CodecInfo' (Gamepad/Keyboard).
 - 30-04-2006 changed: Slideshow keymap - Info button on remote now correctly shows image information.
 - 30-04-2006 changed: music info is now loaded via a thread, result is a smoother gui while loading and better ability to cancel
 - 30-04-2006 changed: removed playing of start.wav, this can be done via startup.xml on window init
 - 30-04-2006 added: manual allmusic button to my music.
 - 30-04-2006 fixed: MakeShortenPath() truncates the last folder if necessary.
 - 30-04-2006 fixed: [ 1479081 ] filemanager bug when copying into a folder ending with spaces.
 - 30-04-2006 fixed: search button was available in my music files, but requires a library.
 - 30-04-2006 fixed: If paplayer reached end of playback before a track was queued (eg in the case of a very short track being played) then the playlist was cleared when there were still items left to play.
 - 30-04-2006 fixed: Remove, Edit and Add Sources wouldn't be applied if the user ran as dash via the <home> tag (not recommended)
 - 29-04-2006 fixed: [ 1478872 ] slide show smb lookup uses shortened path then fails
 - 29-04-2006 fixed: 'movie information' was enabled in context menu for inappropriate entries in video database views.
 - 29-04-2006 fixed: visualisation transition on activate.
 - 29-04-2006 fixed: ButtonScroller - focus wasn't set to defaultbutton.